link_libraries(libtinker_shared)

include_directories(${PROJECT_BINARY_DIR}/lib)

add_executable(dynamic dynamic.f)
add_executable(analyze analyze.f)
add_executable(archive archive.f)
add_executable(radial radial.f)
add_executable(diffuse diffuse.f)
add_executable(anneal anneal.f)
add_executable(bar bar.f)
add_executable(xyzpdb xyzpdb.f)
add_executable(pdbxyz pdbxyz.f)
add_executable(minimize minimize.f)
add_executable(polarize polarize.f)
add_executable(potential potential.f)
